src/OpenCvSharpExtern/optflow.h

CVAPI(ExceptionStatus) optflow_calcOpticalFlowSF1(
    const interop::InputArrayProxy* from,
    const interop::InputArrayProxy* to,
    const interop::OutputArrayProxy* flow,
    int layers,
    int averagingBlockSize,
    int maxFlow)
{
    return cvTry([&] {
        cv::optflow::calcOpticalFlowSF(InProxy(*from), InProxy(*to), OutProxy(*flow), layers, averagingBlockSize, maxFlow);
    });
}
CVAPI(ExceptionStatus) optflow_calcOpticalFlowSF2(
    const interop::InputArrayProxy* from,
    const interop::InputArrayProxy* to,
    const interop::OutputArrayProxy* flow,
    int layers,
    int averagingBlockSize,
    int maxFlow,
    double sigmaDist,
    double sigmaColor,
    int postprocessWindow,
    double sigmaDistFix,
    double sigmaColorFix,
    double occThr,
    int upscaleAveragingRadius,
    double upscaleSigmaDist,
    double upscaleSigmaColor,
    double speedUpThr)
{
    return cvTry([&] {
        cv::optflow::calcOpticalFlowSF(InProxy(*from), InProxy(*to), OutProxy(*flow), layers, averagingBlockSize, maxFlow,
            sigmaDist, sigmaColor, postprocessWindow, sigmaDistFix, sigmaColorFix,
            occThr, upscaleAveragingRadius, upscaleSigmaDist, upscaleSigmaColor, speedUpThr);
    });
}
CVAPI(ExceptionStatus) optflow_calcOpticalFlowSparseToDense(
    const interop::InputArrayProxy* from,
    const interop::InputArrayProxy* to,
    const interop::OutputArrayProxy* flow,
    int grid_step,
    int k,
    float sigma,
    int use_post_proc,
    float fgs_lambda,
    float fgs_sigma)
{
    return cvTry([&] {
        cv::optflow::calcOpticalFlowSparseToDense(
            InProxy(*from), InProxy(*to), OutProxy(*flow),
            grid_step, k, sigma, use_post_proc != 0, fgs_lambda, fgs_sigma);
    });
}
// These factories return the concrete DeepFlow/SimpleFlow/Farneback/SparseToDense/PCAFlow/DenseRLOF/SparseRLOF
// implementation, but typed as Ptr<cv::DenseOpticalFlow> (or Ptr<cv::SparseOpticalFlow>) by the OpenCV API itself,
// so they are exposed on the managed side as plain OpenCvSharp.DenseOpticalFlow/SparseOpticalFlow instances via
// DenseOpticalFlow.FromPtr/SparseOpticalFlow.FromPtr, reusing the existing video_Ptr_DenseOpticalFlow_get/delete
// and video_Ptr_SparseOpticalFlow_get/delete bindings already defined in video_tracking.h for the base type.

CVAPI(ExceptionStatus) optflow_createOptFlow_DeepFlow(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_DeepFlow());
    });
}
CVAPI(ExceptionStatus) optflow_createOptFlow_SimpleFlow(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_SimpleFlow());
    });
}
CVAPI(ExceptionStatus) optflow_createOptFlow_Farneback(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_Farneback());
    });
}
CVAPI(ExceptionStatus) optflow_createOptFlow_SparseToDense(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_SparseToDense());
    });
}
CVAPI(ExceptionStatus) optflow_Ptr_DualTVL1OpticalFlow_delete(cv::Ptr<cv::optflow::DualTVL1OpticalFlow> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_DualTVL1OpticalFlow_get(
    cv::Ptr<cv::optflow::DualTVL1OpticalFlow> *ptr, cv::optflow::DualTVL1OpticalFlow **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_create(
    double tau, double lambda, double theta, int nscales, int warps, double epsilon,
    int innerIterations, int outerIterations, double scaleStep, double gamma,
    int medianFiltering, int useInitialFlow,
    cv::Ptr<cv::optflow::DualTVL1OpticalFlow> **returnValue)
{
    return cvTry([&] {
        const auto p = cv::optflow::DualTVL1OpticalFlow::create(
            tau, lambda, theta, nscales, warps, epsilon,
            innerIterations, outerIterations, scaleStep, gamma,
            medianFiltering, useInitialFlow != 0);
        *returnValue = new cv::Ptr<cv::optflow::DualTVL1OpticalFlow>(p);
    });
}
CVAPI(ExceptionStatus) optflow_createOptFlow_DualTVL1(cv::Ptr<cv::optflow::DualTVL1OpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_DualTVL1());
    });
}
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getTau(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getTau(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setTau(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setTau(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getLambda(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getLambda(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setLambda(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setLambda(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getTheta(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getTheta(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setTheta(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setTheta(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getGamma(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getGamma(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setGamma(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setGamma(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getScalesNumber(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getScalesNumber(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setScalesNumber(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setScalesNumber(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getWarpingsNumber(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getWarpingsNumber(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setWarpingsNumber(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setWarpingsNumber(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getEpsilon(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getEpsilon(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setEpsilon(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setEpsilon(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getInnerIterations(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getInnerIterations(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setInnerIterations(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setInnerIterations(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getOuterIterations(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getOuterIterations(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setOuterIterations(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setOuterIterations(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getUseInitialFlow(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUseInitialFlow() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setUseInitialFlow(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setUseInitialFlow(value != 0); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getScaleStep(cv::optflow::DualTVL1OpticalFlow *obj, double *returnValue) { return cvTry([&] { *returnValue = obj->getScaleStep(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setScaleStep(cv::optflow::DualTVL1OpticalFlow *obj, double value) { return cvTry([&] { obj->setScaleStep(value); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_getMedianFiltering(cv::optflow::DualTVL1OpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getMedianFiltering(); }); }
CVAPI(ExceptionStatus) optflow_DualTVL1OpticalFlow_setMedianFiltering(cv::optflow::DualTVL1OpticalFlow *obj, int value) { return cvTry([&] { obj->setMedianFiltering(value); }); }
CVAPI(ExceptionStatus) optflow_Ptr_PCAPrior_delete(cv::Ptr<cv::optflow::PCAPrior> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_PCAPrior_get(cv::Ptr<cv::optflow::PCAPrior> *ptr, cv::optflow::PCAPrior **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
CVAPI(ExceptionStatus) optflow_PCAPrior_new(const char *pathToPrior, cv::Ptr<cv::optflow::PCAPrior> **returnValue)
{
    return cvTry([&] {
        *returnValue = new cv::Ptr<cv::optflow::PCAPrior>(cv::makePtr<cv::optflow::PCAPrior>(pathToPrior));
    });
}
CVAPI(ExceptionStatus) optflow_PCAPrior_getPadding(cv::optflow::PCAPrior *obj, int *returnValue)
{
    return cvTry([&] { *returnValue = obj->getPadding(); });
}
CVAPI(ExceptionStatus) optflow_PCAPrior_getBasisSize(cv::optflow::PCAPrior *obj, int *returnValue)
{
    return cvTry([&] { *returnValue = obj->getBasisSize(); });
}
CVAPI(ExceptionStatus) optflow_Ptr_OpticalFlowPCAFlow_delete(cv::Ptr<cv::optflow::OpticalFlowPCAFlow> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_OpticalFlowPCAFlow_get(
    cv::Ptr<cv::optflow::OpticalFlowPCAFlow> *ptr, cv::optflow::OpticalFlowPCAFlow **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
// prior may be null (no learned prior). basisSize is passed as separate width/height ints rather than
// interop::Size to keep this entry point trivial to call with a default-constructed cv::Size(18, 14).
CVAPI(ExceptionStatus) optflow_OpticalFlowPCAFlow_new(
    cv::Ptr<cv::optflow::PCAPrior> *prior,
    int basisSizeWidth, int basisSizeHeight,
    float sparseRate, float retainedCornersFraction, float occlusionsThreshold,
    float dampingFactor, float claheClip,
    cv::Ptr<cv::optflow::OpticalFlowPCAFlow> **returnValue)
{
    return cvTry([&] {
        const cv::Ptr<const cv::optflow::PCAPrior> priorPtr = prior
            ? cv::Ptr<const cv::optflow::PCAPrior>(*prior)
            : cv::Ptr<const cv::optflow::PCAPrior>();
        *returnValue = new cv::Ptr<cv::optflow::OpticalFlowPCAFlow>(
            cv::makePtr<cv::optflow::OpticalFlowPCAFlow>(
                priorPtr, cv::Size(basisSizeWidth, basisSizeHeight),
                sparseRate, retainedCornersFraction, occlusionsThreshold, dampingFactor, claheClip));
    });
}
CVAPI(ExceptionStatus) optflow_createOptFlow_PCAFlow(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_PCAFlow());
    });
}